# OpenForum

./: .env.example  .gitignore  Makefile  agent.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  Cargo.toml  Dockerfile
apps/api/migrations/: 0001_create_articles.sql  0002_add_article_subtitle.sql  0003_add_profile_headline.sql  0004_articles_rls.sql
apps/api/scripts/: bootstrap_new_project.sql
apps/api/src/: config.rs  lib.rs  main.rs  state.rs
apps/api/src/middleware/: auth.rs  rate_limit.rs
apps/api/src/models/: article.rs  user.rs
apps/api/src/routes/: articles.rs  health.rs  mod.rs  upload.rs  users.rs
apps/api/src/services/: articles.rs  articles_postgres.rs  cache.rs  cloudinary.rs  drive.rs  mod.rs  sheets.rs
apps/api/tests/: api_integration.rs
apps/web/: .env.example  next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/articles/: page.tsx
apps/web/src/app/categories/: page.tsx
apps/web/src/app/category/: page.tsx
apps/web/src/app/feed/: page.tsx
apps/web/src/lib/: categories.ts  routes.test.ts  routes.ts
apps/web/src/lib/api/: users.ts  (+2 more)
docs/: CREDENTIALS_GUIDE.md  DEPLOYMENT_CHECKLIST.md  RENDER_DEPLOYMENT.md  SUPABASE_SETUP.md  UPSTASH_REDIS_SETUP.md  VERCEL_DEPLOYMENT.md  ui-port-audit.md  ui-port-plan.md
scripts/: apply_supabase_public_schema.py
supabase/migrations/: 001_create_profiles.sql
(+57 files in other folders)
